--- a/src/breakpoint/_hide-above.scss
+++ b/src/breakpoint/_hide-above.scss
@@ -1,53 +1,53 @@
 @media (min-width: $breakpoint-xxsmall+1) {
-    .hide-xxsmall {
+    .hide-above-xxsmall {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-xsmall+1) {
-    .hide-xsmall {
+    .hide-above-xsmall {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-small+1) {
-    .hide-small {
+    .hide-above-small {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-medium-small+1) {
-    .hide-medium-small {
+    .hide-above-medium-small {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-medium+1) {
-    .hide-medium {
+    .hide-above-medium {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-medium-large+1) {
-    .hide-medium-large {
+    .hide-above-medium-large {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-large+1) {
-    .hide-large {
+    .hide-above-large {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-xlarge+1) {
-    .hide-xlarge {
+    .hide-above-xlarge {
         display: none;
     }
 }
 
 @media (min-width: $breakpoint-xxlarge+1) {
-    .hide-xxlarge {
+    .hide-above-xxlarge {
         display: none;
     }
 }
